# ChangeLog for media-video/linuxdvb
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.3 2003/08/07 15:13:32 mad Exp $

*linuxtv-dvb-1.0.0 (07 Aug 2003)
  07 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  release 1.0.0

*linuxtv-dvb-1.0.0_pre3-r20030801 (04 Aug 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added stillimage prog and gentoo.mpg as splash screen
  for vdr

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new cvs vsersion

*linuxtv-dvb-1.0.0_pre3-r20030608 (10 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  11 Jul 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added a devfsd reload afer install

  10 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new cvs head version

*linuxtv-dvb-1.0.0_pre3 (04 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  04 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new version, noting else

*linuxtv-dvb-1.0.0_pre2-r20030524 (02 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  02 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
  initial ebuild, some parts are from Martin Holzers/Thomas Raschbachers 
  ebuild, some parts has grown at gentoo.de cvs over the last months.
  because this is from the cvs drivers (new vdr version only runs with them)
  it is considered unstable
