@@ -1,11 +1,13 @@
-MD5 af236a852133cb6c8f1cc821888d0cea linuxtv-dvb-1.0.0.ebuild 3230
+MD5 0a161d66e54bfab5e2140d60abfaa03f linuxtv-dvb-1.0.0-r20030905.ebuild 3269
+MD5 caf2254cd786ef89d0ffc2eba100add6 linuxtv-dvb-1.0.0.ebuild 3217
 MD5 c7c1d55239fe1e6e798fa6dad0646f52 linuxtv-dvb-1.0.0_pre3-r20030608.ebuild 3024
 MD5 ada8716e240a869df8066a982d43fa84 linuxtv-dvb-1.0.0_pre2-r20030524.ebuild 2927
 MD5 684317767013dbef28802cfdd5bc10a2 linuxtv-dvb-1.0.0_pre3-r20030801.ebuild 3235
 MD5 a6d6832856bd019b8808023dff4eddcf linuxtv-dvb-1.0.0_pre3.ebuild 2954
-MD5 01e2ee5b48aa70f6426443d0d462c333 ChangeLog 1489
+MD5 5cdfb945d807419451d3e13b52360736 ChangeLog 1591
 MD5 63397b70b4b53955f667840dc11fefce files/digest-linuxtv-dvb-1.0.0_pre3 75
 MD5 db7c10b004c39a2af048851af743b300 files/digest-linuxtv-dvb-1.0.0 69
+MD5 f73708c926c71088f9e8be2d36a68f88 files/digest-linuxtv-dvb-1.0.0-r20030905 73
 MD5 a0e0fd38012792b5f6126ba073e35b55 files/stillimage.patch 1503
 MD5 8a78625e5b9d6ad94d7ab21c7b724b44 files/digest-linuxtv-dvb-1.0.0_pre3-r20030608 73
 MD5 5fef61f7fa5e5cd33ad61640c211e3bf files/digest-linuxtv-dvb-1.0.0_pre3-r20030801 73
