@@ -1,6 +1,10 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.3 2003/08/07 15:13:32 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.4 2003/09/21 17:27:30 mad Exp $
+
+*linuxtv-dvb-1.0.0-r20030905 (21 Sep 2003)
+  21 Sep 2003; Martin Hierling <mad@cc.fh-lippe.de>
+  new dvb head version, removed splash due to lack of patch
 
 *linuxtv-dvb-1.0.0 (07 Aug 2003)
   07 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
